# Voxel-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  b.txt
.cache/clangd/index/: _fixes.hpp.80EF602940150927.idx  _vectorize.hpp.0C766D6691267A31.idx  afblue.c.CF127D3E0758A0EC.idx  afblue.h.E34FE3FAE06E8515.idx  afcjk.c.78A31A56DA2EB151.idx  afcjk.h.E9D94E2F7ACAF63A.idx  afcover.h.421D3895D1D96F18.idx  afdummy.c.C98230B8B164D309.idx  afdummy.h.D425E4106E8C0AB1.idx  aferrors.h.C474E2F32572A6EF.idx  afglobal.c.3722B5023FD0CF25.idx  afglobal.h.B5CC5D227E671E52.idx  afhints.c.C4FE4F64A1774441.idx  afhints.h.A402110F098AD789.idx  afindic.c.5D387ECCC5508357.idx  afindic.h.C694147E63A4E418.idx  aflatin.c.2D1B8962397FF900.idx  aflatin.h.59341119ED73471F.idx  afloader.c.F7443EC0648033A0.idx  afloader.h.15C885EB56800C85.idx  afmodule.c.9B6D5DEA4EE6AB5A.idx  afmodule.h.C9BC7DC2CCF7FD16.idx  afmparse.c.1FEF6E1B8115C849.idx  afmparse.h.11013A0C24598C40.idx  afranges.c.291C7635611F553E.idx  afranges.h.E7A19EE4F7D49838.idx  afscript.h.7C86B276C3C401B7.idx  afshaper.c.64018D1DEDAD21BA.idx  afshaper.h.DAE2AFCA3178F922.idx  afstyles.h.4ED6AE93B1983756.idx  aftypes.h.C285F4FEEF5C2C77.idx  afws-decl.h.09E8910ADC619510.idx  afws-iter.h.3D88C0142C52EACD.idx  autofit.c.7AAD462CD8759498.idx  autohint.h.5ABA19939C7A45BD.idx  bdf.c.593257AC7B585EB7.idx  bdf.h.9DC1842A3C43D23F.idx  bdfdrivr.c.429648C0DF6A78FE.idx  bdfdrivr.h.3B7EC9F93C72EDBB.idx  bdferror.h.B958805B18A709DB.idx  (+631 more)
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: game.cpp  game.h  global.h  main.cpp
src/engine/camera/: camera.cpp  camera.h
src/engine/input_listener/: input_listener.cpp  input_listener.h
src/engine/renderer/: frustum.hpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture_loader.cpp  texture_loader.h
src/engine/window/: window.cpp  window.h
src/engine/window/GUI/: gui.cpp  gui.h
src/shaders/: skybox.frag  skybox.vert  triangle.frag  triangle.vert  water.frag  water.vert
src/utils/: hash.h  perlin.cpp  perlin.h  pop_count.h  thread_safe_queue.h
src/world/: chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  skybox.cpp  skybox.h  world.cpp  world.h
src/world/chunk/: chunk.cpp  chunk.h  chunk_load_comparator.h  chunk_manager.cpp  chunk_manager.h  terrain_generator.cpp  terrain_generator.h
src/world/chunk/terrain_generator/: terrain_generator.cpp  terrain_generator.h
src/world/player/: player.cpp  player.h
src/world/voxel/: types.h  voxel.cpp  voxel.h
